--- a/old/abstract.tex
+++ b/old/abstract.tex
@@ -1,9 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %                                                                 %
-%                            ABSTRACT                             %
+%                         ABSTRACT                         %
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
 \specialhead{ABSTRACT}
 
-Enter your abstract here.
+%---------------------------------------------------------------------------------------%
+
+We did some research and wrote about the results.  
