--- a/old/chapter.tex
+++ b/old/chapter.tex
@@ -15,9 +15,9 @@ Here is a file for your chapters.  Copy this file for each chapter
 and change the titles.  Don't forget to add include statemets to 
 dissertation.tex.  
 You can use sections (as above).  
-You can add glossary terms like \gls{eregex} and acronyms like \glsname{SRE}.
+%You can add glossary terms like \gls{eregex} and acronyms like \glsname{SRE}.
 You can use footnotes.\footnote{Here is a footnote.}
-Don't forget to cite books~\cite{Sipser} and papers~\cite{CarleNarendran}.
+%Don't forget to cite books~\cite{Sipser} and papers~\cite{CarleNarendran}.
 
 %---------------------------------------------------------------------------------------%
 \section{Section Two Title}
