--- a/chapter4.tex
+++ b/chapter4.tex
@@ -11,6 +11,8 @@
 \section{Introduction}
 %---------------------------------------------------------------------------------------%
 
+TESTING DROPBOX
+
 The preceding two chapters highlighted the effect of tropical cyclones on the tropopause and upper-level static stability structure in dropsonde observations.
 These observations alone, however, cannot explain the mechanisms that force the observed variability.
 Numerical simulations of an axisymmetric hurricane conducted in an idealized framework reproduced the observed variability.
