--- a/chapter4.tex
+++ b/chapter4.tex
@@ -12,6 +12,7 @@
 %---------------------------------------------------------------------------------------%
 
 TESTING DROPBOX
+THIS IS A REAL TEST
 
 The preceding two chapters highlighted the effect of tropical cyclones on the tropopause and upper-level static stability structure in dropsonde observations.
 These observations alone, however, cannot explain the mechanisms that force the observed variability.
