--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %                                                                 %
-%                            CHAPTER                              %
+%                           CHAPTER 4                             %
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
@@ -20,13 +20,31 @@ Using these simulations, some physical insight into these mechanisms is obtained
 \section{Model Setup}
 %---------------------------------------------------------------------------------------%
 
-The numerical simulations were performed using version 19 of Cloud Model 1 (CM1) described in \cite{BryanRotunno} and available online at [WEBSITE].
-The fully-compressible, axisymmertic equations of motion were integrated on an Arakawa C-Grid with 1-km horizontal and 250-m vertical grid spacing using a 3rd-order Runge-Kutta split-time integration scheme and 5th-order spatial differencing.
-Sub-grid turbulence was parameterized using a Smagorinsky scheme with prescribed horizontal and vertical mixing lengths of 1 km and 100 m, respectively.
-The model domain was 6000-km wide and 35-km deep with a Rayleigh damping layer applied to horizontal and vertical momentum outside of the 5000-km radius and above the 25-km level to prevent spurious gravity wave reflection at the model boundaries.
+The numerical simulations were performed using version 19.1 of Cloud Model 1 (CM1) described in \cite{BryanRotunno2009} and available online at [WEBSITE].
+The fully-compressible, axisymmertic equations of motion were integrated on an Arakawa C-Grid with 1-km horizontal and 250-m vertical grid spacing using a 3rd-order Klemp-Wilhelmson time-splitting integration scheme with 5th-order spatial differencing.
+Sub-grid turbulence was parameterized using the planetary boundary layer scheme described in \cite{BryanRotunno2009}, with prescribed horizontal mixing lengths of 100 m at a surface pressure of 1015 hPa and 1000 m at a surface pressure of 900 hPa. 
+The model domain was 3000-km-wide and 35-km-deep with a Rayleigh damping layer applied outside of the 5000-km radius and above the 25-km level to prevent spurious gravity wave reflection at the model boundaries.
 Microphysical processes were parameterized every advective time step using the Thompson microphysics scheme \cite{Thompson} and radiative heating tendencies were computed every two minutes using the RRTMG [CITATION] longwave and shortwave schemes. 
+Temperature and humidity were initialized with a horizontally-homogeneous sounding computed by averaging all dropsondes deployed during the TCI flight conducted on 21 October, 2015 within and around Tropical Storm Patricia (see \cite{DoyleTCI} for details.)
+Since relative humidity measurements were unreliable at temperatures below -40 deg C \cite{BellTCI}, the water vapor mixing ratio was assumed to be zero above 16 km.
+
  
 As in the preceding chapters, static stability is analyzed using N^2, which is output directly by the model. Potential temperature tendencies 
+
+%---------------------------------------------------------------------------------------%
+\section{Results}
+%---------------------------------------------------------------------------------------%
+
+The modeled storm's intensity evolution during the first four days of the simulation is depicted in Fig. 1 (blue lines).
+Following a 24-hour initial spin-up period, the storm rapidly intensifies, and its maximum 10-m wind speed reaches XXX kt at XXX hours and its minimum central pressure reaches XXX hPa at XXX hours.
+This intensification closely resembles that recorded in the NHC best track for Hurricane Patricia (Fig. 1, red stars), indicating that the CM1 simulation is a good representation of Patricia's evolution.
+The cold-point tropopause and static stability evolution during this time period is depicted in Fig. 2 for the modeled storm.
+The mean tropopause height during the first 24 hours (Day 1; Fig. 2a) lies near XXX km and exhibits little radial variability, with a static stability maximum immediately overlying it in the XXX-XXX-km layer.
+As the storm begins its rapid intensification period (Day 2; Fig. 2b), the mean static stability just above the tropopause decreases.
+This decrease is particularly pronounced near the storm center, which allows the tropopause to rise at the innermost radii.
+The static stability continues to weaken at small radii into Days 3 and 4 (Figs. 2c,d), and the tropopause rises dramatically above the storm's eye.
+Meanwhile, outside of the eye region, static stability just above the tropopause strengthens.
+This static stability evolution closely follows that observed by the TCI dropsondes deployed in Hurricane Patricia (2015; \cite{DuranMolinari2018}).
 
 %You can add glossary terms like \gls{eregex} and acronyms like \glsname{SRE}.
 You can use footnotes.\footnote{Here is a footnote.}
