Updated references.bib, made a few changes to ack.tex, and added a command to git-notes

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -29,7 +29,7 @@ Temperature and humidity were initialized with a horizontally-homogeneous soundi
 Since relative humidity measurements were unreliable at temperatures below -40 deg C \cite{BellTCI}, the water vapor mixing ratio was assumed to be zero above 16 km.
 
  
-As in the preceding chapters, static stability is analyzed using N^2, which is output directly by the model. Potential temperature tendencies 
+As in the preceding chapters, static stability is analyzed using N2, which is output directly by the model. Potential temperature tendencies 
 
 %---------------------------------------------------------------------------------------%
 \section{Results}
