A few updates to Acknowledgements.

--- a/ack.tex
+++ b/ack.tex
@@ -8,7 +8,7 @@
 
 %---------------------------------------------------------------------------------------%
 
-This dissertation is the fulfillment of a childhood dream that would not have come true without the selfless dedication of countless people.
+\indent This dissertation is the fulfillment of a childhood dream that would not have come true without the selfless dedication of countless people.
 
 First I must thank my advisor, John Molinari, for his unswerving kindness, humility, and patience over these past six years.  
 Former students have described him as a "brilliant scientist and an even better man," an assessment with which I wholeheartedly concur.  
@@ -21,13 +21,13 @@ Thanks to all of the DAES faculty for building and carefully maintaining such a 
 It was always comforting to know that every faculty member truly cared about the students, and always worked to build us up as scientists and professionals.  
 Nowhere was their dedication to students more evident than in their outstanding courses, which I thoroughly enjoyed, and which greatly contributed to my knowledge.  
 
-I also owe a tremendous debt to Steven Lazarus and Michael Splitt of the Florida Institute of Technology, whose selfless investment in me as an undergraduate played a critical role in my academic development, and prepared me well for PhD-level research and course work.
+I also owe a tremendous debt to Steven Lazarus and Michael Splitt of the Florida Institute of Technology, whose selfless investment in me as an undergraduate played a critical role in my academic development, and prepared me for PhD-level research and course work.
 
 I am grateful for the support and friendship of all of the DAES graduate students, particularly Travis Elless, Stephanie Stevenson, Oscar Chimborazo, Sarah Ditchek, Matthew Vaughan, and Steven Fuhrman.  
-Your friendship and encouragement over these years has meant a lot to me.
+Their friendship and encouragement over these years has meant a lot to me.
 I owe a special thanks to Chip Helms for not only being a fantastic friend, but for innumerable stimulating conversations, and for introducing me to so many people in the tropical meteorology community.  
 Thanks also to research associate Dave Vollaro, whose guidance during my first year of graduate school greatly accelerated my development as a programmer, and whose baseball knowledge far surpassed mine.
 
-Last and most importantly, I thank my girlfriend, Erika Navarro, for her constant love and support, and my parents for the innumerable sacrifices that they have made on my behalf.
+Last and most importantly, I thank my fianc\'ee, Erika Navarro, for her constant love and support, and my parents for the innumerable sacrifices that they have made on my behalf.
 Their gentle encouragement always pushed me to achieve my greatest potential, and their belief in me provided indispensible sustenance during times of hardship. 
 This work is dedicated to them.
