--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -23,9 +23,9 @@ author = {Doyle, James D. and Moskaitis, J. and Feldmeier, J and Ferek, R. and B
 title = {{A view of tropical cyclones from above: The Tropical Cyclone Intensity (TCI) Experiment}},
 journal = {Bull. Amer. Meteor. Soc.},
 year = {2017},
-volume = {XXX},
-number = {X},
-pages = {XXX-XXX}
+volume = {98},
+number = {10},
+pages = {2113-2134}
 }
 
 @article{DuranMolinari2018,
@@ -33,9 +33,9 @@ author = {Duran, Patrick and J. Molinari},
 title = {{Dramatic inner-core tropopause variability during the rapid intensification of Hurricane Patricia (2015)}},
 journal = {Mon. Wea. Rev.},
 year = {2018},
-volume = {XXX},
-number = {X},
-pages = {XXX-XXX}
+volume = {146},
+number = {1},
+pages = {119-134}
 }
 
 @misc{BellTCI,
