--- a/abstract.tex
+++ b/abstract.tex
@@ -8,4 +8,23 @@
 
 %---------------------------------------------------------------------------------------%
 
-We did some research and wrote about the results.  
+\indent \indent Upper-tropospheric thermodynamic processes can play an important role in tropical cyclone (TC) structure and evolution.
+Despite its importance, until recently few in-situ observations were available in the upper levels of TCs.
+Two recent field campaigns - the NASA Hurricane and Severe Storm Sentinel (HS3) and the Office of Naval Research Tropical Cyclone Intensity (TCI) experiment - provided a wealth of high-altitude observations within TCs.
+These observations revealed that the upper-level static stability and tropopause structure can change dramatically with both space and time in TCs.
+
+The TCI dropsonde dataset collected during the rapid intensification (RI) of Hurricane Patricia (2015) revealed dramatic changes in tropopause height and temperature within the storm's inner core.
+These changes in tropopause structure were accompanied by a systematic decrease in tropopause-layer static stability over the eye.
+Outside of the eye, however, an initial decrease in static stability just above the tropopause was followed by an increase in static stability during the latter stages of RI.
+
+Idealized simulations were conducted to examine the processes that might have been responsible for the tropopause variability observed in Hurricane Patricia.
+A static stability budget analysis revealed that three processes - differential advection, vertical gradients of radiative heating, and vertical gradients of turbulent mixing - can produce the observed variability.
+These results support the theoretical assumption that turbulent mixing plays a fundamental role in setting the upper-level potential temperature stratification in TCs.
+The existence of turbulence in the upper troposphere of TCs is corroborated by the presence of low-Richardson number layers in a large number of rawinsonde observations.
+These layers were more common in hurricanes than in weaker TCs, as hurricanes were characterized by both smaller static static stability and larger vertical wind shear in the upper troposphere.
+
+HS3 dropsondes deployed within and around TC Nadine (2012) observed two distinct upper-level stability maxima within the storm's cirrus canopy.
+Outside of the cirrus canopy, however, only one stability maximum was present in the upper levels.
+In a large rawinsonde dataset, multiple stability maxima like those observed in Nadine were observed more often within cold cirrus clouds than outside of cirrus.
+It is hypothesized that vertical gradients of radiative heating within cirrus clouds could produce these multiple stability maxima.
+MENTION THAT STABLE LAYER IS STRONGER WITHIN COLD CIRRUS AND THAT IT'S ALSO STRONGER IN HURRICANES THAN IN TD+TS?
