Add references and Model Setup section.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -37,7 +37,7 @@
 %\include{chapter}
 %\include{chapter2}
 %\include{chapter3}
-\include{chapter4}
+\include{modeling}
 %\include{conclusions}
 % ...
 % Add new \include{chapterX} statements for each chapter you add
