--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -1,3 +1,97 @@
+%
+% JOURNAL ABBREVIATIONS
+%
+@STRING{AMS     = "Amer.\ Meteor.\ Soc."}
+@STRING{AGU     = "Amer.\ Geophys.\ Union"}
+@STRING{AIP     = "Amer. Inst. Phys."}
+@STRING{ADGEO     = "Adv.\ Geosci."}
+@STRING{AFM       = "Agric.\ For.\ Meteor."}
+@STRING{AM        = "Ann.\ Meteor."}
+@STRING{AN        = "Astrophys.\ Norv."}                % Astrophysica Norvegica
+@STRING{AO        = "Atmos.--Ocean"}                    % Atmosphere--Ocean, published by Canadian Meteorological Society (CMOS)
+@STRING{AR        = "Atmos.\ Res."}                     % Atmospheric Research
+@STRING{ARFM      = "Annu.\ Rev.\ Fluid Mech."}
+@STRING{AUMET     = "Aust.\ Meteor.\ Mag."}
+@STRING{BAMS      = "Bull.\ Amer.\ Meteor.\ Soc."}
+@STRING{CAP       = "Contrib.\ Atmos.\ Phys."}
+@STRING{CC        = "Climate Change"}      % Climate Change
+@STRING{CCH       = "Climatic Change"}                  % Climatic Change
+@STRING{CDYN      = "Climate Dyn."}
+@STRING{CHAOS     = "Chaos"}
+@STRING{COL       = "Collier's"}
+@STRING{CRS       = "Cont.\ Shelf Res."}
+@STRING{DAO       = "Dyn.\ Atmos.\ Oceans"}
+@STRING{ECO       = "Ecology"}
+@STRING{EI        = "Earth Interact."}
+@STRING{GA        = "Geophysica"}                       % Geophysica, published by Geophysical Society of Finland
+@STRING{GEOMAG    = "Geophys.\ Mag."}
+@STRING{GN        = "Geophys.\ Norv."}                  % Geophysica Norvegica
+@STRING{GRL       = "Geophys.\ Res.\ Lett."}
+@STRING{GEOPUB    = "Geofys.\ Publ."}
+@STRING{GPC       = "Global Planet.\ Change"}
+@STRING{HP        = "Health Phys."}
+@STRING{IAOP      = "Izv.\ Atmos.\ Ocean.\ Phys.\ (Engl.\ Transl.)"}
+@STRING{IJC       = "Int.\ J.\ Climatol."}
+@STRING{JAM       = "J.\ Appl.\ Meteor."}               % renamed to name below in 2006
+@STRING{JAMC      = "J.\ Appl.\ Meteor.\ Climatol."}    % Journal of Applied Meteorology and Climatology (this journal used to be called the Journal of Applied Meteorology before 2006)
+@STRING{JAS       = "J.\ Atmos.\ Sci."}
+@STRING{JAOT      = "J.\ Atmos.\ Oceanic Technol."}
+@STRING{JCAM      = "J.\ Climate Appl.\ Meteor."}       % from 1983--87, now JAMC
+@STRING{JCLI      = "J.\ Climate"}
+@STRING{JCR       = "J.\ Coastal Res."}
+@STRING{JFM       = "J.\ Fluid\ Mech."}
+@STRING{JEM       = "J.\ Eng.\ Math."}                  % Journal of Engineering Mathematics
+@STRING{JGR       = "J.\ Geophys.\ Res."}
+@STRING{JHM       = "J.\ Hydrometeor."}
+@STRING{JMS       = "J.\ Mar.\ Syst."}
+@STRING{JM        = "J.\ Meteor."}
+@STRING{JMR       = "J.\ Mar.\ Res."}
+@STRING{JMSJ      = "J.\ Meteor.\ Soc.\ Japan"}
+@STRING{JPO       = "J.\ Phys.\ Oceanogr."}
+@STRING{JOCEAN    = "J.\ Oceanogr."}                    % Journal of Oceanography
+@STRING{JOSJ      = "J.\ Oceanogr.\ Soc.\ Japan"}
+@STRING{JSE       = "J.\ Struct.\ Eng."}        % Journal of Structural Engineering at ASCE
+@STRING{JTM       = "J.\ Tropical Meteor."}
+@STRING{JWEIA     = "J.\ Wind Eng.\ Ind.\ Aerodyn."}
+@STRING{MA        = "Meteor.\ Appl."}
+@STRING{MAP       = "Meteor.\ Atmos.\ Phys."}
+@STRING{METMON    = "Meteor.\ Monogr."}
+@STRING{METZEIT   = "Meteor.\ Z."}
+@STRING{MWL       = "Mar.\ Wea.\ Log"}
+@STRING{MWR       = "Mon.\ Wea.\ Rev."}
+@STRING{NAT       = "Nature"}
+@STRING{NHR       = "Nat.\ Hazards Rev."}
+@STRING{NWD       = "Natl.\ Weather Dig."}
+@STRING{OA        = "Oceanol. Aeta"}
+@STRING{OCEAN     = "Oceanography"}                     % a quarterly journal of The Oceanography Society
+@STRING{PAG       = "Pure Appl.\ Geophys."}
+@STRING{PF        = "Phys.\ Fluids"}
+@STRING{PHYSD     = "Physica D"}
+@STRING{PMG       = "Pap.\ Meteor.\ Geophys."}  % Papers in Meteorology and Geophysics
+@STRING{PNAS      = "Proc.\ Natl.\ Acad.\ Sci.\ (USA)"}
+@STRING{PRE       = "Phys.\ Rev.\ E"}
+@STRING{PRSA      = "Proc.\ Roy.\ Soc."}
+@STRING{PT        = "Phys.\ Today"}
+@STRING{PTRS      = "Philos.\ Trans.\ Roy.\ Soc.\ London"}
+@STRING{QJRMS     = "Quart.\ J.\ Roy.\ Meteor.\ Soc."}
+@STRING{RGEO      = "Rev. Geophys."}
+@STRING{SCI       = "Science"}
+@STRING{SOLA      = "SOLA"}                             % Scientific Online Letters on the Atmosphere
+@STRING{TAGU      = "Eos, Trans.\ Amer.\ Geophys.\ Union"}
+@STRING{TELLUS    = "Tellus"}
+@STRING{TCFD      = "Theor.\ Comput.\ Fluid Dyn."}
+@STRING{WEA       = "Weather"}
+@STRING{WW        = "Weatherwise"}
+@STRING{WF        = "Wea.\ Forecasting"}
+@STRING{WMOB      = "WMO Bull."}
+
+
+@misc{BellTCI,
+author = {Bell, Michael M. and Doyle, J. D. and Beaubein, M. and Allen, T. and Brown, B. R. and Dunion, J. P. and Duran, P. and Feldmeier, J. W. and Harrison, L. C. and Hendricks, E. A. and Jeffries, W. and Komaromi, W. A. and Martinez, J. and Molinari, J. and Moskaitis, J. R. and Stern, D. P. and Vollaro, D.},
+title={Office of {N}aval {R}esearch {T}ropical {C}yclone {I}ntensity ({TCI}) 2015 {NASA WB}-57 {H}igh {D}ensity {D}ropsonde {S}ounding {S}ystem ({HDSS}) Data, Version 1.0},
+year={2016},
+DOI={10.5065/D6KW5D8M}}
+
 @article{BryanRotunno2009,
 author = {Bryan, George H. and Rotunno, Richard},
 title = {{The maximum intensity of tropical cyclones in axisymmetric numerical model simulations}},
@@ -8,14 +102,29 @@ number = {6},
 pages = {1770-1789}
 }
 
-@article{Thompson,
-author = {Thompson, Gregory and Rasmussen, Roy M. and Manning, Kevin},
-title = {{Explicit Forecasts of Winter Precipitation Using an Improved Bulk Microphysics Scheme. Part I: Description and Sensitivity Analysis}},
-journal = {Mon. Wea. Rev.},
-year = {2004},
-volume = {132},
-number = {2},
-pages = {519-542}
+@article{Bryan2012,
+author = {Bryan, G. H.},
+year = {2012},
+title = {Effects of surface exchange coefficients and turbulence length scales on the intensity and structure of numerically simulated hurricanes},
+journal = MWR,
+volume = {140},
+pages = {1125-1143}
+}
+
+@misc{Bryan2017,
+author = {Bryan, G. H.},
+year = {cited 2018},
+title = {{The governing equations for CM1}},
+note = {{[Available online at \url{http://www2.mmm.ucar.edu/people/bryan/cm1/cm1_equations.pdf}]}}
+}
+
+@article{Buetal,
+author = {Bu, Y. P. and R. G. Fovell and K. L. Corbosiero},
+year = {2014},
+title = {Influence of cloud-radiative forcing on tropical cyclone structure},
+journal = JAS,
+volume = {71},
+pages = {1644-1622}
 }
 
 @article{DoyleTCI,
@@ -28,6 +137,15 @@ number = {10},
 pages = {2113-2134}
 }
 
+@article{Dunionetal2014,
+author = {Dunion, J. P. and C. D. Thorncroft and C. S. Velden},
+year = {2014},
+title = {The tropical cyclone diurnal cycle of mature hurricanes},
+journal = MWR,
+volume = {142},
+pages = {3900-3919}
+}
+
 @article{DuranMolinari2018,
 author = {Duran, Patrick and J. Molinari},
 title = {{Dramatic inner-core tropopause variability during the rapid intensification of Hurricane Patricia (2015)}},
@@ -38,8 +156,118 @@ number = {1},
 pages = {119-134}
 }
 
-@misc{BellTCI,
-author = {Bell, Michael M. and Doyle, J. D. and Beaubein, M. and Allen, T. and Brown, B. R. and Dunion, J. P. and Duran, P. and Feldmeier, J. W. and Harrison, L. C. and Hendricks, E. A. and Jeffries, W. and Komaromi, W. A. and Martinez, J. and Molinari, J. and Moskaitis, J. R. and Stern, D. P. and Vollaro, D.},
-title={Office of {N}aval {R}esearch {T}ropical {C}yclone {I}ntensity ({TCI}) 2015 {NASA WB}-57 {H}igh {D}ensity {D}ropsonde {S}ounding {S}ystem ({HDSS}) Data, Version 1.0},
-year={2016},
-DOI={10.5065/D6KW5D8M}}
+@article{EmanuelRotunno2011,
+author = {Emanuel, K. and R. Rotunno},
+year = {2011},
+title = {{Self-stratification of tropical cyclone outflow. Part I: Implications for storm structure}},
+journal = JAS,
+volume = {68},
+pages = {2236-2249}
+}
+
+@article{Emanuel2012,
+author = {Emanuel, K},
+year = {2012},
+title = {{Self-stratification of tropical cyclone outflow. Part II: Implications for storm intensification}},
+journal = JAS,
+volume = {69},
+pages = {988-996}
+}
+
+@article{Iacono,
+author = {Iacono, M. J. and J. S. Delamere and E. J. Mlawer and M. W. Shephard and S. A. Clough and W. D. Collins},
+year = {2008},
+title = {Radiative forcing by long-lived greenhouse gases: Calculations with the {AER} radiative transfer models},
+journal = JGR,
+volume = {113},
+number = {D13103}
+}
+
+@article{Kepertetal2016,
+author = {Kepert, J. D. and J. Schwendike and H. Ramsay},
+year = {2016},
+title = {Why is the tropical cyclone boundary layer not "well mixed"?},
+journal = JAS,
+volume = {73},
+pages = {957-973}
+}
+
+@article{Kieuetal,
+author = {Kieu, C. and V. Tallapragada and D.-L. Zhang and Z. Moon},
+year = {2016},
+title = {{On the development of double warm-core structures in intense tropical cyclones}},
+journal = JAS,
+volume = {73},
+pages = {4487-4506}
+}
+
+@misc{Kimberlainetal2016,
+author = {Kimberlain, T. B. and E. S. Blake and J. P. Cangialosi},
+year   = {2016},
+title  = {{Tropical cyclone report: Hurricane Patricia. National Hurricane Center}},
+note   = {[Available online at www.nhc.noaa.gov]}
+}
+
+@article{KomaromiDoyle2017,
+author = {Komaromi, W. A. and J. D. Doyle},
+year = {2017},
+title = {Tropical cyclone outflow and warm core structure as revealed by {HS3} dropsonde data},
+journal = MWR,
+volume = {145},
+pages = {1339-1359}
+}
+
+@article{MarkowskiBryan2016,
+author = {Markowski, P. M. and G. H. Bryan},
+year = {2016},
+title = {{LES} of laminar flow in the {PBL}: A potential problem for convective storm simulations},
+journal = MWR,
+volume = {144},
+pages = {1841-1850}
+}
+
+@article{OhnoSatoh2015,
+author = {Ohno, T. and M. Satoh},
+year = {2015},
+title = {On the warm core of a tropical cyclone formed near the tropopause},
+journal = JAS,
+volume = {72},
+pages = {551-571}
+}
+
+@article{Rogersetal2017,
+author = {Rogers, R. F. and S. Aberson and M. M. Bell and D. J. Cecil and J. D. Doyle and J. Morgerman and L. K. Shay and C. Velden},
+year = {2017},
+title = {Re-writing the tropical record books: The extraordinary intensification of {Hurricane Patricia} (2015)},
+journal = BAMS,
+volume = {98},
+pages = {2091-2112}
+}
+
+@article{SternZhang2013,
+author = {Stern, D. P. and F. Zhang},
+year = {2013},
+title = {{How does the eye warm? Part I: A potential temperature budget analysis of an idealized tropical cyclone}},
+journal = JAS,
+volume = {70},
+pages = {73-89}
+}
+
+@article{Thompson,
+author = {Thompson, Gregory and Rasmussen, Roy M. and Manning, Kevin},
+title = {{Explicit Forecasts of Winter Precipitation Using an Improved Bulk Microphysics Scheme. Part I: Description and Sensitivity Analysis}},
+journal = {Mon. Wea. Rev.},
+year = {2004},
+volume = {132},
+number = {2},
+pages = {519-542}
+}
+
+@article{TrierSharman,
+author = {Trier, S. B. and R. D. Sharman},
+year = {2009},
+title = {{Convection-permitting simulations of the environment supporting widespread turbulence within the upper-level outflow of a mesoscale convective system}},
+journal = MWR,
+volume = {137},
+pages = {1972-1990}
+}
