Add missing RotunnoEmanuel reference and add vmax+pmin figure.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -244,6 +244,15 @@ volume = {98},
 pages = {2091-2112}
 }
 
+@article{RotunnoEmanuel,
+        author = {Rotunno, R. and K. A. Emanuel},
+        year = {1987},
+        title = {An air-sea interaction theory for tropical cyclones. {P}art {II}: Evolutionary study using a nonhydrostatic axisymmetric numerical model},
+        journal = JAS,
+        volume = {44},
+        pages = {542-561}
+        }
+
 @article{SternZhang2013,
 author = {Stern, D. P. and F. Zhang},
 year = {2013},
