--- a/modeling.tex
+++ b/modeling.tex
@@ -45,17 +45,10 @@ Hurricane Patricia (red stars) exhibited a similar intensity evolution prior to 
 \section{Results}
 %---------------------------------------------------------------------------------------%
 
-The modeled storm's intensity evolution during the first four days of the simulation is depicted in Fig. 1 (blue lines).
-Following a 24-hour initial spin-up period, the storm rapidly intensifies, and its maximum 10-m wind speed reaches XXX kt at XXX hours and its minimum central pressure reaches XXX hPa at XXX hours.
-This intensification closely resembles that recorded in the NHC best track for Hurricane Patricia (Fig. 1, red stars), indicating that the CM1 simulation is a good representation of Patricia's evolution.
-The cold-point tropopause and static stability evolution during this time period is depicted in Fig. 2 for the modeled storm.
-The mean tropopause height during the first 24 hours (Day 1; Fig. 2a) lies near XXX km and exhibits little radial variability, with a static stability maximum immediately overlying it in the XXX-XXX-km layer.
-As the storm begins its rapid intensification period (Day 2; Fig. 2b), the mean static stability just above the tropopause decreases.
-This decrease is particularly pronounced near the storm center, which allows the tropopause to rise at the innermost radii.
-The static stability continues to weaken at small radii into Days 3 and 4 (Figs. 2c,d), and the tropopause rises dramatically above the storm's eye.
-Meanwhile, outside of the eye region, static stability just above the tropopause strengthens.
-This static stability evolution closely follows that observed by the TCI dropsondes deployed in Hurricane Patricia (2015; \cite{DuranMolinari2018}).
+%FIGURE 1%
+\begin{figure}[ht]
+\centerline{\includegraphics[width=19pc]{figures/vmax+pmin.png}}
+\caption{The maximum 10-m wind speed (top panel; m s\textsuperscript{-1}) and minimum sea-level pressure (bottom panel; hPa) in the simulated storm (blue lines; plotted every minute) and from Hurricane Patricia's best track (red stars; plotted every six hours beginning at the time Patricia attained tropical storm intensity). The rapid weakening during the later stage of Patricia's lifetime was induced by landfall.}
+\label{fig:vmax+pmin}
+\end{figure}
 
-%You can add glossary terms like \gls{eregex} and acronyms like \glsname{SRE}.
-You can use footnotes.\footnote{Here is a footnote.}
-%Don't forget to cite books~\cite{Sipser} and papers~\cite{CarleNarendran}.
