Add Results section of modeling chapter and Figs. 4-7.

--- a/modeling.tex
+++ b/modeling.tex
@@ -124,7 +124,68 @@ Variations in the magnitude and spatial structure of these terms drive the stati
 %---------------------------------------------------------------------------------------%
 \section{Results}
 %---------------------------------------------------------------------------------------%
+ \subsection{Static stability evolution}
 
+The average $N^2$ over the first day of the simulation (Fig.~\ref{fig:n2-24hr-avgs}a) indicates the presence of a weak $N^2$ maximum just above the cold-point tropopause.
+Over the subsequent 24 hours, during the RI period, the $N^2$ within and above this layer decreased within the 25-km radius (Fig.~\ref{fig:n2-24hr-avgs}b).
+This decreasing $N^2$ corresponded to an increase in the tropopause height within the developing eye, maximized at the storm center.
+Outside of the eye, meanwhile, the tropopause height decreased over the eyewall region (25-60-km radius) and increased only slightly outside of the 60-km radius.
+In this outer region, the $N^2$ maximum just above the tropopause strengthened during RI.
+These trends continued as the storm's intensity leveled off in the 48-72-hour period (Fig.~\ref{fig:n2-24hr-avgs}c).
+The tropopause height increased to nearly 21 km at the storm center and sloped sharply downward to 16.3 km on the inner edge of the eyewall, near the 30 km radius.
+Static stability outside of the eye, meanwhile, continued to increase just above the cold-point tropopause.
+This $N^2$ evolution closely follows that observed in Hurricane Patricia (2015; \citeauthor{DuranMolinari2018} \citeyear{DuranMolinari2018}, see their Fig. 4).
+The mechanisms that led to these $N^2$ changes will be investigated in the subsequent sections.
+
+ \subsection{Static stability budget analysis}
+
+\paragraph{0-24 hours}\mbox{}\\
+\indent The initial spin-up period was characterized by a steady increase of the maximum wind speed from 11 m s\textsuperscript{-1} to 22 m s\textsuperscript{-1} (Fig.~\ref{fig:vmax+pmin}a, blue line), an intensification rate that closely matched that of TC Patricia (Fig.~\ref{fig:vmax+pmin}a, red stars).
+The weakening of the lower-stratospheric static stability maximum during this period is reflected in the total $N^2$ budget change over this time (Fig.~\ref{fig:stab-00-24}a).
+The layer just above the cold-point tropopause was characterized by decreasing $N^2$ (purple shading), maximizing at the storm center.
+At and immediately below the tropopause, meanwhile, $N^2$ increased during this time period (green shading).
+Although these tendencies extended out to the 200-km radius, they were particularly pronounced at innermost radii.
+A comparison of the contributions of advection (Fig.~\ref{fig:stab-00-24}b), vertical turbulence (Fig.~\ref{fig:stab-00-24}c), and radiation (Fig.~\ref{fig:stab-00-24}d) reveals that advection was the primary driver of the $N^2$ tendency during this period, acting to stabilize near and just below the tropopause and destabilize above.
+Although vertical turbulence acted in opposition to advection (i.e. it acted to stabilize regions that advection acted to destabilize), the magnitude of the advective tendencies was larger, particularly at the innermost radii.
+The sum of advection and vertical turbulence (Fig.~\ref{fig:stab-00-24}e) almost exactly replicated the static stability tendencies above the tropopause.
+Radiative tendencies, meanwhile, (Fig.~\ref{fig:stab-00-24}d) acted to destabilize the layer below about 16 km and stabilize the layer between 16 and 17 km.
+The sum of advection, vertical turbulence, and radiation (Fig.~\ref{fig:stab-00-24}f) reproduced the total change in $N^2$ almost exactly.
+
+\paragraph{24-48 hours}\mbox{}\\
+\indent During the RI period, the maximum wind speed increased from 22 m s\textsuperscript{-1} to 80 m s\textsuperscript{-1} (Fig.~\ref{fig:vmax+pmin}a).
+Over this time, $N^2$ within the eye generally decreased above 16 km and increased below (Fig.~\ref{fig:stab-24-48}a), with the destabilization above 16 km maximizing near the level of the mean cold-point tropopause.
+These tendencies at the innermost radii were driven almost entirely by advection (Fig.~\ref{fig:stab-24-48}b).
+Vertical turbulence (Fig.~\ref{fig:stab-24-48}c) and radiation (Fig.~\ref{fig:stab-24-48}d) contributed negligibly to the static stability tendencies in this region.
+
+Outside of the eye, the $N^2$ evolution exhibited alternating layers of positive and negative tendencies.
+Near and above 18 km existed an upward-sloping region of decreasing $N^2$ that extended out to the 180-km radius.
+In this region, neither vertical turbulence nor radiation exhibited negative $N^2$ tendencies; advection was the only forcing for this destabilization.
+Immediately below this layer, just above the cold-point tropopause, was a region of increasing $N^2$ that sloped upward from 17 km near the 30-km radius to just below 18 km outside of the 100-km radius.
+Advection and vertical turbulence both contributed to this positive $N^2$ tendency, with advection playing an important role below about 17.5 km and and turbulence playing an important role above.
+The sum of advection and turbulence (Fig.~\ref{fig:stab-24-48}e) reveals two separate regions of increasing $N^2$ in the 17-18-km layer rather than one contiguous region.
+The addition of radiation to these two terms, however, (Fig.~\ref{fig:stab-24-48}f) provides the link between these two regions, indicating that radiation also plays a role in strengthening the stable layer just above the tropopause.
+In the 16-17-km layer, just below the cold-point tropopause, a horizontally-extensive layer of destabilization also was forced by a combination of advection, vertical turbulence, and radiation.
+The sum of advection and vertical turbulence accounts for only a portion of the decreasing $N^2$ in this layer, and actually indicates forcing for stabilization near the 50-km radius and outside of the 130-km radius.
+Radiative tendencies overcome this forcing for stabilization in both of these regions to produce the radially-extensive region of destabilization observed just below the tropopause.
+
+The sum of advection, vertical turbulence, and radiation (Fig.~\ref{fig:stab-24-48}f) once again closely follows the observed $N^2$ variability, except in the eyewall region, where the neglect of latent heating and horizontal turbulence introduces some differences.
+
+\paragraph{48-72 hours}\mbox{}\\
+\indent After the storm's maximum wind speed leveled off near 80 m s\textsuperscript{-1} (Fig.~\ref{fig:vmax+pmin}a), the magnitude of the static stability tendencies within the eye decreased to near zero (Fig.~\ref{fig:stab-48-72}a).
+Outside of the eye, however, $N^2$ continued to decrease in the layer immediately sorrounding the tropopause and increase just above.
+The sum of advection and vertical turbulence (Fig.~\ref{fig:stab-48-72}e) indicates that these two processes account for most of the destabilization near the tropopause and some of the stabilization near the 18-km altitude.
+Below the tropopause, however, these two terms provided strong forcing for stabilization that was not observed in the budget change (Fig.~\ref{fig:stab-48-72}a).
+Radiation (Fig.~\ref{fig:stab-48-72}d), which generally forced stabilization above 17 km and destabilization below, balanced out this forcing for stabilization in the upper troposphere.
+In the eyewall region (30-80-km radius), advection and vertical turbulence combined to force destabilization in the 17-18-km layer (Fig.~\ref{fig:stab-48-72}e), which was not observed in the budget change (Fig.~\ref{fig:stab-48-72}a).
+Radiation provided strong forcing for stabilization, which outweighed this effect and produced net stabilization in a portion of this region.
+Outside of the 80-km radius, both advection (Fig.~\ref{fig:stab-48-72}b) and vertical turbulence (Fig.~\ref{fig:stab-48-72}c) provided forcing for stabilization near and just above the 18-km level.
+The sum of the two terms (Fig.~\ref{fig:stab-48-72}e) indicates increasing $N^2$ near the 18-km level everywhere outside of the 80-km radius, but this stabilization is slightly weaker in the 90-120-km radial band than the observed value.
+The addition of radiation (Fig.~\ref{fig:stab-48-72}f) provided the extra forcing for stabilization required to account for the observed increase in $N^2$.
+Outside of the 120-km radius, the region of radiative forcing for stabilization sloped downward, and the increase in $N^2$ observed near 18 km can be explained entirely by a combination of advection and vertical turbulence.
+
+%---------------------------------------------------------------------------------------%
+%FIGURES
+%---------------------------------------------------------------------------------------%
 %FIGURE 1%
 \begin{figure}[ht]
 \centerline{\includegraphics[width=19pc]{figures/vmax+pmin.png}}
@@ -149,3 +210,36 @@ Orange lines represent the cold-point tropopause height averaged over the same t
 For each budget term, the absolute value of the $N^2$ tendency is averaged temporally over 1-hour periods (using output every minute), and spatially in a region extending from 0 to 200 km radius and 14 to 21 km altitude.}
 \label{fig:avgbudterms}
 \end{figure}
+
+%FIGURE 4%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/n2-24hr-avgs.png}}
+\caption{Twenty-four-hour averages of squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours.
+Orange lines represent the cold-point tropopause height averaged over the same time periods.}
+\label{fig:n2-24hr-avgs}
+\end{figure*}
+
+%FIGURE 5%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/h000-h024-budgetterms.png}}
+\end{figure*}
+\begin{figure}
+\caption{(a) Total change in $N^2$ over the 0-24-hour period (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) and the contributions to that change from (b) the sum of horizontal and vertical advection, (c) vertical turbulence, (d) longwave and shortwave radiation, (e) the sum of horizontal advection, vertical advection, and vertical turbulence, and (f) the sum of horizontal advection, vertical advection, vertical turbulence, and longwave and shortwave radiation.
+Green shading indicates regions of stabilization and purple shading indicates regions of destabilization.
+Orange lines represent the cold-point tropopause height averaged over the 0-24-hour period.}
+\label{fig:stab-00-24}
+\end{figure}
+
+%FIGURE 6%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/h024-h048-budgetterms.png}}
+\caption{As in Fig.~\ref{fig:stab-00-24}, but for the 24-48-hour period.}
+\label{fig:stab-24-48}
+\end{figure*}
+
+%FIGURE 7%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/h048-h072-budgetterms.png}}
+\caption{As in Fig.~\ref{fig:stab-00-24}, but for the 48-72-hour period.}
+\label{fig:stab-48-72}
+\end{figure*}
